--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   easy_localization: ^3.0.7
   country_flags: ^3.0.0
+  flutter_animation_progress_bar: ^2.3.1
 
 dev_dependencies:
   flutter_test:
