--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_animation_progress_bar: ^2.3.1
   sqflite: ^2.3.3+1
   path: ^1.9.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
