--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   sqflite: ^2.3.3+1
   path: ^1.9.0
   image_picker: ^1.1.2
-  syncfusion_flutter_charts: ^26.1.42
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
