--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   path: ^1.9.0
   image_picker: ^1.1.2
   fl_chart: ^0.68.0
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
