--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   image_picker: ^1.1.2
   fl_chart: ^0.68.0
   flutter_rating_bar: ^4.0.1
+  syncfusion_flutter_charts: ^26.2.7
 
 dev_dependencies:
   flutter_test:
