--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   fl_chart: ^0.68.0
   flutter_rating_bar: ^4.0.1
   syncfusion_flutter_charts: ^26.2.7
+  shared_preferences: ^2.3.1
 
 dev_dependencies:
   flutter_test:
